Fix windows high contrast

--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -242,7 +242,7 @@ $focus-state-box-shadow-color: rgba(0, 0, 0, 0.8);
     }
   }
   &:active {
-    background-color: var(--p-surface-pressed);
+    background-color: var(--p-surface-primary-selected-pressed);
   }
 
   @include focus-ring;
@@ -276,13 +276,10 @@ $focus-state-box-shadow-color: rgba(0, 0, 0, 0.8);
   outline: none;
   text-align: center;
 
-  &:hover {
-    .Title {
-      @include recolor-icon(var(--p-icon, color('ink', 'lighter')));
-      background-color: var(--p-surface-hovered, transparent);
-      border-bottom: var(--p-override-none, $underline-height) solid
-        color('sky');
-    }
+  &:hover .Title {
+    @include recolor-icon(var(--p-icon, color('ink', 'lighter')));
+    background-color: var(--p-surface-hovered, transparent);
+    border-bottom: var(--p-override-none, $underline-height) solid color('sky');
   }
 
   &:focus {
@@ -298,10 +295,8 @@ $focus-state-box-shadow-color: rgba(0, 0, 0, 0.8);
     }
   }
 
-  &:active {
-    .Title {
-      background-color: var(--p-surface-pressed, transparent);
-    }
+  &:active .Title {
+    background-color: var(--p-surface-pressed, transparent);
   }
 }
 
@@ -351,11 +346,15 @@ $focus-state-box-shadow-color: rgba(0, 0, 0, 0.8);
 
   .DisclosureActivator {
     &:hover .Title {
+      background: none;
+
       &::before {
         background: var(--p-border-hovered);
       }
+
       @media (-ms-high-contrast: active) {
         outline: rem(1px) solid ms-high-contrast-color('text');
+
         // stylelint-disable-next-line max-nesting-depth
         &::before {
           display: none;
@@ -369,6 +368,14 @@ $focus-state-box-shadow-color: rgba(0, 0, 0, 0.8);
       &::before {
         background: var(--p-border-hovered);
       }
+      @media (-ms-high-contrast: active) {
+        outline: rem(1px) solid ms-high-contrast-color('text');
+
+        // stylelint-disable-next-line max-nesting-depth
+        &::before {
+          display: none;
+        }
+      }
     }
 
     &:active .Title::before {
@@ -380,6 +387,7 @@ $focus-state-box-shadow-color: rgba(0, 0, 0, 0.8);
     &:hover .Title {
       @media (-ms-high-contrast: active) {
         outline: rem(3px) solid ms-high-contrast-color('text');
+
         // stylelint-disable-next-line max-nesting-depth
         &::before {
           display: none;
@@ -390,6 +398,7 @@ $focus-state-box-shadow-color: rgba(0, 0, 0, 0.8);
     &:focus .Title {
       @media (-ms-high-contrast: active) {
         outline: rem(3px) solid ms-high-contrast-color('text');
+
         // stylelint-disable-next-line max-nesting-depth
         &::before {
           display: none;
